// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verificationCode > render correctly with accessibleLabel 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_6m_"
      >
        test
      </label>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_6m_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_7e_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="true"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_7e_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with error as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_70_"
      >
        test
      </label>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-describedby="_r_71_"
          aria-invalid="true"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_70_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-3"
        />
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
        id="_r_71_"
        role="status"
      >
        error-test
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_5s_"
      >
        test
      </label>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-describedby="_r_5t_"
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_5s_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
      <span
        class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
        id="_r_5t_"
        role="status"
      >
        test-helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_6a_"
      >
        test
      </label>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_6a_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_0.5rem_xxsmall__xf61n43p"
      >
        <label
          class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          for="_r_8e_"
        >
          test
        </label>
        <span>
          description
        </span>
      </div>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_8e_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_5i_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_5i_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_small__1m876pf3 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_small__1m876pf3 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_small__1m876pf3 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_small__1m876pf3 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as boolean 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_7o_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_7o_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > render correctly with success as string 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_82_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-describedby="_r_83_"
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_82_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_success_true__1m876pfa style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_success__1do42lse style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_59__1do42ls2x"
          data-testid="box-3"
        />
      </div>
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_success__1do42lse style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_56__1do42ls2u"
        id="_r_83_"
        role="status"
      >
        test
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_0_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_0_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > renders correctly with initial value and placeholder and 6 fields 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_a_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_a_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value="13"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          data-testid="box-0"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          data-testid="box-1"
        >
          3
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        >
          0
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        >
          0
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-4"
        >
          0
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-5"
        >
          0
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_58_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="true"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_58_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value="1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 styles_error_true__1m876pfb style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
          data-testid="box-0"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_error_true__1m876pfb style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_51__1do42ls2p"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should handle typing and focus 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles__ahdbou0"
        for="_r_o_"
      />
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          id="_r_o_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value="1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          data-testid="box-0"
        >
          1
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-1"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`verificationCode > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
    >
      <label
        class="styles_htmlFor__l58dz72 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodyStrong__1do42lsn style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
        for="_r_8q_"
      >
        test
      </label>
      <div
        class="styles__1m876pf5"
      >
        <input
          aria-invalid="false"
          autocomplete="one-time-code"
          class="styles__1m876pf6"
          disabled=""
          id="_r_8q_"
          inputmode="numeric"
          pattern="[0-9]*"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 styles_current_true__1m876pf9 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
          data-testid="box-0"
        >
          <span
            aria-hidden="true"
            class="styles__1m876pf7"
          />
        </span>
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
          data-testid="box-1"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
          data-testid="box-2"
        />
        <span
          aria-hidden="true"
          class="styles_large__1m876pf1 styles__1m876pf8 style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_31__1do42ls25"
          data-testid="box-3"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
